welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: ';' expected but '(' found.
var hauteur: Int (getMondeHauteur() )
                 ^