welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var hauteur: Int (getMondeHauteur() )
var T = new Array[Color] (hauteur)
for ( k <- 0 to hauteur){
	avance() }


}
